samples/_failures_safe/1761178028_5c727b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_912cddac.c: In function ‘main’:
./samples/SAFE/__tmp_912cddac.c:140:16: error: missing terminating " character
  140 |         printf("5
      |                ^~
./samples/SAFE/__tmp_912cddac.c:140:9: error: expected expression at end of input
  140 |         printf("5
      |         ^~~~~~
./samples/SAFE/__tmp_912cddac.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_912cddac.c:140:9: error: expected declaration or statement at end of input
